src/test/deca/syntax/valid/test_synt/class/method_in_constructor.deca
// Description:
//    Test de déclaration ou on utilise une méthode de la classe elle meme dans le constructeur
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//    context: en context il ya une erreur parce que il ne voit pas la méthode.
//
//
// Historique:
//    cree le 20/01/2022

class coordonnees{
    int x = plan(z);
    int y = 10 + 204;

    int plan(int z){
        return z;
    }
}

{
    coordonnees coords = new coordonnees();
    println(1);
}